--- a/angularclient/src/tsconfig.json
+++ b/angularclient/src/tsconfig.json
@@ -15,5 +15,10 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "e2e",
+    "**/*.spec.ts"    
+  ]
 }
